include/Tilengine.h

		typedef char			int8_t;		/*!< signed 8-bit wide data */
		typedef short			int16_t;	/*!< signed 16-bit wide data */
		typedef int				int32_t;	/*!< signed 32-bit wide data */
		typedef unsigned char	uint8_t;	/*!< unsigned 8-bit wide data */
		typedef unsigned short	uint16_t;	/*!< unsigned 16-bit wide data */
		typedef unsigned int	uint32_t;	/*!< unsigned 32-bit wide data */
		typedef unsigned char bool;		/*!< C++ bool type for C language */
		#define false	0
		#define true	1
/* version */
#define TILENGINE_VER_MAJ	2
#define TILENGINE_VER_MIN	9
#define TILENGINE_VER_REV	4
#define TILENGINE_HEADER_VERSION ((TILENGINE_VER_MAJ << 16) | (TILENGINE_VER_MIN << 8) | TILENGINE_VER_REV)
#define BITVAL(n) (1<<(n))
/*! tile/sprite flags. Can be none or a combination of the following: */
typedef enum
{
	FLAG_NONE		= 0,			/*!< no flags */
	FLAG_FLIPX		= BITVAL(15),	/*!< horizontal flip */
	FLAG_FLIPY		= BITVAL(14),	/*!< vertical flip */
	FLAG_ROTATE		= BITVAL(13),	/*!< row/column flip (unsupported, Tiled compatibility) */
	FLAG_PRIORITY	= BITVAL(12),	/*!< tile goes in front of sprite layer */
	FLAG_MASKED		= BITVAL(11),	/*!< sprite won't be drawn inside masked region */
}
TLN_TileFlags;
/*!
 * layer blend modes. Must be one of these and are mutually exclusive:
 */
typedef enum
{
	BLEND_NONE,		/*!< blending disabled */
	BLEND_MIX25,	/*!< color averaging 1 */
	BLEND_MIX50,	/*!< color averaging 2 */
	BLEND_MIX75,	/*!< color averaging 3 */
	BLEND_ADD,		/*!< color is always brighter (simulate light effects) */
	BLEND_SUB,		/*!< color is always darker (simulate shadow effects) */
	BLEND_MOD,		/*!< color is always darker (simulate shadow effects) */
	BLEND_OR,		/*!< Logical OR */
	BLEND_XOR,		/*!< Logical XOR */
	BLEND_NOR,		/*!< Logical NOR */
	BLEND_AND,		/*!< Logical AND */
	BLEND_NAND,		/*!< Logical NAND */
	BLEND_CUSTOM,	/*!< user provided blend function with TLN_SetCustomBlendFunction() */
	MAX_BLEND,
	BLEND_MIX = BLEND_MIX50
}
TLN_Blend;
/*!
 * layer type retrieved by \ref TLN_GetLayerType
 */
typedef enum
{
	LAYER_NONE,		/*!< undefined */
	LAYER_TILE,		/*!< tilemap-based layer */
	LAYER_OBJECT,	/*!< objects layer */
	LAYER_BITMAP,	/*!< bitmapped layer */
}
TLN_LayerType;
/*! Affine transformation parameters */
typedef struct
{
	float angle;	/*!< rotation in degrees */
	float dx;		/*!< horizontal translation */
	float dy;		/*!< vertical translation */
	float sx;		/*!< horizontal scaling */
	float sy;		/*!< vertical scaling */
}
TLN_Affine;
/*! Tile item for Tilemap access methods */
typedef union Tile
{
	uint32_t value;
	struct
	{
		uint16_t index;		/*!< tile index */
		uint16_t flags;		/*!< attributes (FLAG_FLIPX, FLAG_FLIPY, FLAG_PRIORITY) */
	};
}
Tile;
/*! frame animation definition */
typedef struct
{
	int index;		/*!< tile/sprite index */
	int delay;		/*!< time delay for next frame */
}
TLN_SequenceFrame;
/*! color strip definition */
typedef struct
{
	int delay;		/*!< time delay between frames */
	uint8_t first;	/*!< index of first color to cycle */
	uint8_t count;	/*!< number of colors in the cycle */
	uint8_t dir;	/*!< direction: 0=descending, 1=ascending */
}
TLN_ColorStrip;
/*! sequence info returned by TLN_GetSequenceInfo */
typedef struct
{
	char name[32];	/*!< sequence name */
	int num_frames;	/*!< number of frames */
}
TLN_SequenceInfo;
/*! Sprite creation info for TLN_CreateSpriteset() */
typedef struct
{
	char name[64];	/*!< entry name */
	int x;			/*!< horizontal position */
	int y;			/*!< vertical position */
	int w;			/*!< width */
	int h;			/*!< height */
}
TLN_SpriteData;
/*! Sprite information */
typedef struct
{
	int w;			/*!< width of sprite */
	int h;			/*!< height of sprite */
}
TLN_SpriteInfo;
/*! Tile information returned by TLN_GetLayerTile() */
typedef struct
{
	uint16_t index;	/*!< tile index */
	uint16_t flags;	/*!< attributes (FLAG_FLIPX, FLAG_FLIPY, FLAG_PRIORITY) */
	int row;		/*!< row number in the tilemap */
	int col;		/*!< col number in the tilemap */
	int xoffset;	/*!< horizontal position inside the title */
	int yoffset;	/*!< vertical position inside the title */
	uint8_t color;	/*!< color index at collision point */
	uint8_t type;	/*!< tile type */
	bool empty;		/*!< cell is empty*/
}
TLN_TileInfo;
/*! Object item info returned by TLN_GetObjectInfo() */
typedef struct
{
	uint16_t id;	/*!< unique ID */
	uint16_t gid;	/*!< graphic ID (tile index) */
	uint16_t flags;	/*!< attributes (FLAG_FLIPX, FLAG_FLIPY, FLAG_PRIORITY) */
	int x;			/*!< horizontal position */
	int y;			/*!< vertical position */
	int width;		/*!< horizontal size */
	int height;		/*!< vertical size */
	uint8_t type;	/*!< type property */
	bool visible;	/*!< visible property */
	char name[64];	/*!< name property */
}
TLN_ObjectInfo;
/*! Tileset attributes for TLN_CreateTileset() */
typedef struct
{
	uint8_t	type;		/*!< tile type */
	bool	priority;	/*!< priority flag set */
}
TLN_TileAttributes;
/*! overlays for CRT effect */
typedef enum
{
	TLN_OVERLAY_NONE,		/*!< no overlay */
	TLN_OVERLAY_SHADOWMASK,	/*!< Shadow mask pattern */
	TLN_OVERLAY_APERTURE,	/*!< Aperture grille pattern */
	TLN_OVERLAY_SCANLINES,	/*!< Scanlines pattern */
	TLN_OVERLAY_CUSTOM,		/*!< User-provided when calling TLN_CreateWindow() */
	TLN_MAX_OVERLAY
}
TLN_Overlay;
/*! pixel mapping for TLN_SetLayerPixelMapping() */
typedef struct
{
	int16_t dx;		/*! horizontal pixel displacement */
	int16_t dy;		/*! vertical pixel displacement */
}
TLN_PixelMap;
typedef struct Engine*		 TLN_Engine;			/*!< Engine context */
typedef union  Tile*		 TLN_Tile;				/*!< Tile reference */
typedef struct Tileset*		 TLN_Tileset;			/*!< Opaque tileset reference */
typedef struct Tilemap*		 TLN_Tilemap;			/*!< Opaque tilemap reference */
typedef struct Palette*		 TLN_Palette;			/*!< Opaque palette reference */
typedef struct Spriteset*	 TLN_Spriteset;			/*!< Opaque sspriteset reference */
typedef struct Sequence*	 TLN_Sequence;			/*!< Opaque sequence reference */
typedef struct SequencePack* TLN_SequencePack;		/*!< Opaque sequence pack reference */
typedef struct Bitmap*		 TLN_Bitmap;			/*!< Opaque bitmap reference */
typedef struct ObjectList*	 TLN_ObjectList;		/*!< Opaque object list reference */
/*! Image Tile items for TLN_CreateImageTileset() */
typedef struct
{
	TLN_Bitmap bitmap;
	uint16_t id;
	uint8_t	type;
}
TLN_TileImage;
/*! Sprite state */
typedef struct
{
	int x;						/*!< Screen position x */
	int y;						/*!< Screen position y */
	int w;						/*!< Actual width in screen (after scaling) */
	int h;						/*!< Actual height in screen (after scaling) */
	uint32_t flags;				/*!< flags */
	TLN_Palette palette;		/*!< assigned palette */	 
	TLN_Spriteset spriteset;	/*!< assigned spriteset */	
	int index;					/*!< graphic index inside spriteset */
	bool enabled;				/*!< enabled or not */
	bool collision;				/*!< per-pixel collision detection enabled or not */
}
TLN_SpriteState;
/* callbacks */
typedef union SDL_Event SDL_Event;
typedef void(*TLN_VideoCallback)(int scanline);
typedef uint8_t(*TLN_BlendFunction)(uint8_t src, uint8_t dst);
typedef void(*TLN_SDLCallback)(SDL_Event*);
/*! Player index for input assignment functions */
typedef enum
{
	PLAYER1,	/*!< Player 1 */
	PLAYER2,	/*!< Player 2 */
	PLAYER3,	/*!< Player 3 */
	PLAYER4,	/*!< Player 4 */
}
TLN_Player;
/*! Standard inputs query for TLN_GetInput() */
typedef enum
{
	INPUT_NONE,		/*!< no input */
	INPUT_UP,		/*!< up direction */
	INPUT_DOWN,		/*!< down direction */
	INPUT_LEFT,		/*!< left direction */
	INPUT_RIGHT,	/*!< right direction */
	INPUT_BUTTON1,	/*!< 1st action button */
	INPUT_BUTTON2,	/*!< 2nd action button */
	INPUT_BUTTON3,	/*!< 3th action button */
	INPUT_BUTTON4,	/*!< 4th action button */
	INPUT_BUTTON5,	/*!< 5th action button */
	INPUT_BUTTON6,	/*!< 6th action button */
	INPUT_START,	/*!< Start button */
	INPUT_QUIT,		/*!< Window close (only Player 1 keyboard) */
	INPUT_CRT,		/*!< CRT toggle (only Player 1 keyboard) */

	/* ... up to 32 unique inputs */

	INPUT_P1 = (PLAYER1 << 5), 	/*!< request player 1 input (default) */
	INPUT_P2 = (PLAYER2 << 5),	/*!< request player 2 input */
	INPUT_P3 = (PLAYER3 << 5),	/*!< request player 3 input */
	INPUT_P4 = (PLAYER4 << 5),	/*!< request player 4 input */

	/* compatibility symbols for pre-1.18 input model */
	INPUT_A = INPUT_BUTTON1,
	INPUT_B = INPUT_BUTTON2,
	INPUT_C = INPUT_BUTTON3,
	INPUT_D = INPUT_BUTTON4,
	INPUT_E = INPUT_BUTTON5,
	INPUT_F = INPUT_BUTTON6,
}
TLN_Input;
TLNAPI void TLN_SetCustomBlendFunction (TLN_BlendFunction);
/**@}*/

/**
 * \defgroup windowing
 * \brief Built-in window and input management
* @{ */
TLNAPI bool TLN_CreateWindow (const char* overlay, int flags);
TLNAPI bool TLN_GetInput (TLN_Input id);
/**@}*/

/**
 * \defgroup spriteset
 * \brief Spriteset resources management for sprites
* @{ */
TLNAPI TLN_Spriteset TLN_CreateSpriteset (TLN_Bitmap bitmap, TLN_SpriteData* data, int num_entries);
/**@}*/

/**
 * \defgroup tileset
 * \brief Tileset resources management for background layers 
* @{ */
TLNAPI TLN_Tileset TLN_CreateTileset (int numtiles, int width, int height, TLN_Palette palette, TLN_SequencePack sp, TLN_TileAttributes* attributes);
TLNAPI TLN_Tileset TLN_CreateImageTileset(int numtiles, TLN_TileImage* images);
TLNAPI bool TLN_SetLayerPixelMapping (int nlayer, TLN_PixelMap* table);
TLNAPI TLN_LayerType TLN_GetLayerType(int nlayer);
TLNAPI bool TLN_GetLayerTile (int nlayer, int x, int y, TLN_TileInfo* info);
TLNAPI bool TLN_GetSequenceInfo (TLN_Sequence sequence, TLN_SequenceInfo* info);