include/Tilengine.nim

##
##  Tilengine - The 2D retro graphics engine with raster effects
##  Copyright (C) 2015-2019 Marc Palacios Domenech <mailto:megamarc@hotmail.com>
##  All rights reserved
##
##  This Source Code Form is subject to the terms of the Mozilla Public
##  License, v. 2.0. If a copy of the MPL was not distributed with this
##  file, You can obtain one at http://mozilla.org/MPL/2.0/.
##

## *
##  \defgroup types
##  \brief Common data types
##  @{
##  Tilengine shared

when defined(_MSC_VER):
  when defined(LIB_EXPORTS):
    discard
  else:
    const
      __declspec* = cast[dllexport](__declspec(dllimport))
  when _MSC_VER >= 1600:
    discard
  else:
    type
      int8_t* = char
    ## !< signed 8-bit wide data
    type
      int16_t* = cshort
    ## !< signed 16-bit wide data
    type
      int32_t* = cint
    ## !< signed 32-bit wide data
    type
      uint8_t* = cuchar
    ## !< unsigned 8-bit wide data
    type
      uint16_t* = cushort
    ## !< unsigned 16-bit wide data
    type
      uint32_t* = cuint
    ## !< unsigned 32-bit wide data
  when _MSC_VER >= 1800:
    discard
  else:
    type
      bool* = cuchar
    ## !< C++ bool type for C language
    const
      false* = 0
      true* = 1
else:
  when defined(LIB_EXPORTS):
    const
      __declspec* = cast[dllexport](__attribute__((visibility("default"))))
  else:
    const
      __declspec* = (dllexport)
##  version

const
  TILENGINE_VER_MAJ* = 2
  TILENGINE_VER_MIN* = 9
  TILENGINE_VER_REV* = 4
  TILENGINE_HEADER_VERSION* = ((TILENGINE_VER_MAJ shl 16) or
      (TILENGINE_VER_MIN shl 8) or TILENGINE_VER_REV)

template BITVAL*(n: untyped): untyped =
  (1 shl (n))

## ! tile/sprite flags. Can be none or a combination of the following:

type
  TLN_TileFlags* {.size: sizeof(cint).} = enum
    FLAG_NONE = 0,              ## !< no flags
    FLAG_FLIPX = BITVAL(15),    ## !< horizontal flip
    FLAG_FLIPY = BITVAL(14),    ## !< vertical flip
    FLAG_ROTATE = BITVAL(13),   ## !< row/column flip (unsupported, Tiled compatibility)
    FLAG_PRIORITY = BITVAL(12), ## !< tile goes in front of sprite layer
    FLAG_MASKED = BITVAL(11)    ## !< sprite won't be drawn inside masked region


## !
##  layer blend modes. Must be one of these and are mutually exclusive:
##

type
  TLN_Blend* {.size: sizeof(cint).} = enum
    BLEND_NONE,               ## !< blending disabled
    BLEND_MIX25,              ## !< color averaging 1
    BLEND_MIX50,              ## !< color averaging 2
    BLEND_MIX75,              ## !< color averaging 3
    BLEND_ADD,                ## !< color is always brighter (simulate light effects)
    BLEND_SUB,                ## !< color is always darker (simulate shadow effects)
    BLEND_MOD,                ## !< color is always darker (simulate shadow effects)
    BLEND_CUSTOM,             ## !< user provided blend function with TLN_SetCustomBlendFunction()
    MAX_BLEND

const
  BLEND_MIX* = BLEND_MIX50

## !
##  layer type retrieved by \ref TLN_GetLayerType
##

type
  TLN_LayerType* {.size: sizeof(cint).} = enum
    LAYER_NONE,               ## !< undefined
    LAYER_TILE,               ## !< tilemap-based layer
    LAYER_OBJECT,             ## !< objects layer
    LAYER_BITMAP              ## !< bitmapped layer


## ! Affine transformation parameters

type
  TLN_Affine* {.importc: "TLN_Affine", header: "Tilengine.h", bycopy.} = object
    angle* {.importc: "angle".}: cfloat ## !< rotation in degrees
    dx* {.importc: "dx".}: cfloat ## !< horizontal translation
    dy* {.importc: "dy".}: cfloat ## !< vertical translation
    sx* {.importc: "sx".}: cfloat ## !< horizontal scaling
    sy* {.importc: "sy".}: cfloat ## !< vertical scaling


## ! Tile item for Tilemap access methods

type
  INNER_C_STRUCT_Tilengine_131* {.importc: "Tile::no_name", header: "Tilengine.h",
                                 bycopy.} = object
    index* {.importc: "index".}: uint16_t ## !< tile index
    flags* {.importc: "flags".}: uint16_t ## !< attributes (FLAG_FLIPX, FLAG_FLIPY, FLAG_PRIORITY)

  Tile* {.importc: "Tile", header: "Tilengine.h", bycopy, union.} = object
    value* {.importc: "value".}: uint32_t
    ano_Tilengine_131* {.importc: "ano_Tilengine_131".}: INNER_C_STRUCT_Tilengine_131


## ! frame animation definition

type
  TLN_SequenceFrame* {.importc: "TLN_SequenceFrame", header: "Tilengine.h", bycopy.} = object
    index* {.importc: "index".}: cint ## !< tile/sprite index
    delay* {.importc: "delay".}: cint ## !< time delay for next frame


## ! color strip definition

type
  TLN_ColorStrip* {.importc: "TLN_ColorStrip", header: "Tilengine.h", bycopy.} = object
    delay* {.importc: "delay".}: cint ## !< time delay between frames
    first* {.importc: "first".}: uint8_t ## !< index of first color to cycle
    count* {.importc: "count".}: uint8_t ## !< number of colors in the cycle
    dir* {.importc: "dir".}: uint8_t ## !< direction: 0=descending, 1=ascending


## ! sequence info returned by TLN_GetSequenceInfo

type
  TLN_SequenceInfo* {.importc: "TLN_SequenceInfo", header: "Tilengine.h", bycopy.} = object
    name* {.importc: "name".}: array[32, char] ## !< sequence name
    num_frames* {.importc: "num_frames".}: cint ## !< number of frames


## ! Sprite creation info for TLN_CreateSpriteset()

type
  TLN_SpriteData* {.importc: "TLN_SpriteData", header: "Tilengine.h", bycopy.} = object
    name* {.importc: "name".}: array[64, char] ## !< entry name
    x* {.importc: "x".}: cint    ## !< horizontal position
    y* {.importc: "y".}: cint    ## !< vertical position
    w* {.importc: "w".}: cint    ## !< width
    h* {.importc: "h".}: cint    ## !< height


## ! Sprite information

type
  TLN_SpriteInfo* {.importc: "TLN_SpriteInfo", header: "Tilengine.h", bycopy.} = object
    w* {.importc: "w".}: cint    ## !< width of sprite
    h* {.importc: "h".}: cint    ## !< height of sprite


## ! Tile information returned by TLN_GetLayerTile()

type
  TLN_TileInfo* {.importc: "TLN_TileInfo", header: "Tilengine.h", bycopy.} = object
    index* {.importc: "index".}: uint16_t ## !< tile index
    flags* {.importc: "flags".}: uint16_t ## !< attributes (FLAG_FLIPX, FLAG_FLIPY, FLAG_PRIORITY)
    row* {.importc: "row".}: cint ## !< row number in the tilemap
    col* {.importc: "col".}: cint ## !< col number in the tilemap
    xoffset* {.importc: "xoffset".}: cint ## !< horizontal position inside the title
    yoffset* {.importc: "yoffset".}: cint ## !< vertical position inside the title
    color* {.importc: "color".}: uint8_t ## !< color index at collision point
    `type`* {.importc: "type".}: uint8_t ## !< tile type
    empty* {.importc: "empty".}: bool ## !< cell is empty


## ! Object item info returned by TLN_GetObjectInfo()

type
  TLN_ObjectInfo* {.importc: "TLN_ObjectInfo", header: "Tilengine.h", bycopy.} = object
    id* {.importc: "id".}: uint16_t ## !< unique ID
    gid* {.importc: "gid".}: uint16_t ## !< graphic ID (tile index)
    flags* {.importc: "flags".}: uint16_t ## !< attributes (FLAG_FLIPX, FLAG_FLIPY, FLAG_PRIORITY)
    x* {.importc: "x".}: cint    ## !< horizontal position
    y* {.importc: "y".}: cint    ## !< vertical position
    width* {.importc: "width".}: cint ## !< horizontal size
    height* {.importc: "height".}: cint ## !< vertical size
    `type`* {.importc: "type".}: uint8_t ## !< type property
    visible* {.importc: "visible".}: bool ## !< visible property
    name* {.importc: "name".}: array[64, char] ## !< name property


## ! Tileset attributes for TLN_CreateTileset()

type
  TLN_TileAttributes* {.importc: "TLN_TileAttributes", header: "Tilengine.h", bycopy.} = object
    `type`* {.importc: "type".}: uint8_t ## !< tile type
    priority* {.importc: "priority".}: bool ## !< priority flag set


## ! overlays for CRT effect

type
  TLN_Overlay* {.size: sizeof(cint).} = enum
    TLN_OVERLAY_NONE,         ## !< no overlay
    TLN_OVERLAY_SHADOWMASK,   ## !< Shadow mask pattern
    TLN_OVERLAY_APERTURE,     ## !< Aperture grille pattern
    TLN_OVERLAY_SCANLINES,    ## !< Scanlines pattern
    TLN_OVERLAY_CUSTOM,       ## !< User-provided when calling TLN_CreateWindow()
    TLN_MAX_OVERLAY


## ! pixel mapping for TLN_SetLayerPixelMapping()

type
  TLN_PixelMap* {.importc: "TLN_PixelMap", header: "Tilengine.h", bycopy.} = object
    dx* {.importc: "dx".}: int16_t ## ! horizontal pixel displacement
    dy* {.importc: "dy".}: int16_t ## ! vertical pixel displacement

  TLN_Engine* = ptr Engine

## !< Engine context

type
  TLN_Tile* = ptr Tile

## !< Tile reference

type
  TLN_Tileset* = ptr Tileset

## !< Opaque tileset reference

type
  TLN_Tilemap* = ptr Tilemap

## !< Opaque tilemap reference

type
  TLN_Palette* = ptr Palette

## !< Opaque palette reference

type
  TLN_Spriteset* = ptr Spriteset

## !< Opaque sspriteset reference

type
  TLN_Sequence* = ptr Sequence

## !< Opaque sequence reference

type
  TLN_SequencePack* = ptr SequencePack

## !< Opaque sequence pack reference

type
  TLN_Bitmap* = ptr Bitmap

## !< Opaque bitmap reference

type
  TLN_ObjectList* = ptr ObjectList

## !< Opaque object list reference
## ! Image Tile items for TLN_CreateImageTileset()

type
  TLN_TileImage* {.importc: "TLN_TileImage", header: "Tilengine.h", bycopy.} = object
    bitmap* {.importc: "bitmap".}: TLN_Bitmap
    id* {.importc: "id".}: uint16_t
    `type`* {.importc: "type".}: uint8_t


## ! Sprite state

type
  TLN_SpriteState* {.importc: "TLN_SpriteState", header: "Tilengine.h", bycopy.} = object
    x* {.importc: "x".}: cint    ## !< Screen position x
    y* {.importc: "y".}: cint    ## !< Screen position y
    w* {.importc: "w".}: cint    ## !< Actual width in screen (after scaling)
    h* {.importc: "h".}: cint    ## !< Actual height in screen (after scaling)
    flags* {.importc: "flags".}: uint32_t ## !< flags
    palette* {.importc: "palette".}: TLN_Palette ## !< assigned palette
    spriteset* {.importc: "spriteset".}: TLN_Spriteset ## !< assigned spriteset
    index* {.importc: "index".}: cint ## !< graphic index inside spriteset
    enabled* {.importc: "enabled".}: bool ## !< enabled or not
    collision* {.importc: "collision".}: bool ## !< per-pixel collision detection enabled or not


##  callbacks

type
  TLN_VideoCallback* = proc (scanline: cint)
  TLN_BlendFunction* = proc (src: uint8_t; dst: uint8_t): uint8_t
  TLN_SDLCallback* = proc (a1: ptr SDL_Event)

## ! Player index for input assignment functions

type
  TLN_Player* {.size: sizeof(cint).} = enum
    PLAYER1,                  ## !< Player 1
    PLAYER2,                  ## !< Player 2
    PLAYER3,                  ## !< Player 3
    PLAYER4                   ## !< Player 4


## ! Standard inputs query for TLN_GetInput()

type
  TLN_Input* {.size: sizeof(cint).} = enum
    INPUT_NONE,               ## !< no input
    INPUT_UP,                 ## !< up direction
    INPUT_DOWN,               ## !< down direction
    INPUT_LEFT,               ## !< left direction
    INPUT_RIGHT,              ## !< right direction
    INPUT_BUTTON1,            ## !< 1st action button
    INPUT_BUTTON2,            ## !< 2nd action button
    INPUT_BUTTON3,            ## !< 3th action button
    INPUT_BUTTON4,            ## !< 4th action button
    INPUT_BUTTON5,            ## !< 5th action button
    INPUT_BUTTON6,            ## !< 6th action button
    INPUT_START,              ## !< Start button
    INPUT_QUIT,               ## !< Window close (only Player 1 keyboard)
    INPUT_CRT,                ## !< CRT toggle (only Player 1 keyboard)
              ##  ... up to 32 unique inputs
    INPUT_P1 = (PLAYER1 shl 5),   ## !< request player 1 input (default)
    INPUT_P2 = (PLAYER2 shl 5),   ## !< request player 2 input
    INPUT_P3 = (PLAYER3 shl 5),   ## !< request player 3 input
    INPUT_P4 = (PLAYER4 shl 5)    ## !< request player 4 input
                          ##  compatibility symbols for pre-1.18 input model
